tests/badly_positioned_spread/badly_positioned_spread.exp
Error ------------------------------------------------------------------------------------------------------ bad.js:10:8

Cannot spread object literal because property `color` is missing in statics of function type [1] but exists in object
type [2] in property `foo`.

   bad.js:10:8
   10|     ...{Bar: y}
              ^^^^^^^^

References:
   foo.js:3:1
    3| function Foo(props: {||}): void {}
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   bad.js:5:17
    5| const y : {foo: {color?: string}} = {foo: {color: "cat"}};
                       ^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ good.js:8:8

Cannot spread object literal because property `color` is missing in statics of function type [1] but exists in object
type [2] in property `foo`.

   good.js:8:8
              v------
    8|     ...{Bar: {
    9|         foo: Foo,
   10|     }}
           -^

References:
   foo.js:3:1
    3| function Foo(props: {||}): void {}
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   good.js:5:17
    5| const y : {foo: {color?: string}} = {foo: {color: "cat"}};
                       ^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:6

Cannot spread `V` because number [1] is incompatible with string [2].

   test.js:7:6
   7|   ...V
           ^

References:
   test.js:3:25
   3| declare var V : { name: number };
                              ^^^^^^ [1]
   test.js:6:10
   6|   name : 'good',
               ^^^^^^ [2]



Found 3 errors
